SOC-2351: User Activity Stream UI refinements What is the problem to fix? UI refinements for the User activity stream. - Insert a title "Share My Status" on top - "What are you working on?" should use a larger font and the box should be a little taller - Add : Link | File should be aligned with "Share" button - Insert a title bar : "My Activity Stream" above the stream tabs - Rename tabs : All Updates | My Connections | My Spaces | My Status

--- a/webapp/portlet/src/main/webapp/skin/social/portlet/UIUserActivityStreamPortlet/DefaultStylesheet.css
+++ b/webapp/portlet/src/main/webapp/skin/social/portlet/UIUserActivityStreamPortlet/DefaultStylesheet.css
@@ -39,11 +39,19 @@
 	background: #EBEBEB;
 }
 
+.UIUserActivityStreamPortlet .UIUserActivitiesDisplay .ActivityStreamTitle {
+    background: none repeat scroll 0 0 #F8F8F8;
+    border: 1px solid #E1E1E1;
+    border-radius: 3px 3px 3px 3px;
+    padding: 10px;
+    font-weight: normal;
+}
+
 .UIUserActivityStreamPortlet .UIAction {
 	border: none;
 	border-bottom: 1px solid #e1e1e1;
 	text-align: left;
-	padding: 20px 0px;
+	padding: 0px 0px 20px;
 }
 
 .UIUserActivityStreamPortlet .UIActivitiesLoadButton {
